[project]
name = "py-utils"
version = "0.0.1"
description = ""
authors = [
    {name = "Fraser Davidson",email = "fraser@frontierhq.com"}
]
readme = "README.md"
repository = "https://github.com/frontierhq/py-utils"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "python-terraform (>=0.10.1,<0.11.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.9.2"
yamllint = "^1.35.1"
