[project]
name = "py-utils"
version = "0.2.0"
description = ""
authors = [
    {name = "Fraser Davidson",email = "fraser@frontierhq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "python-terraform (>=0.10.1,<0.11.0)",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "yamllint>=1.35.1",
]
